# chat

./: .coverage 2  Dockerfile  Makefile  None  README.md  docker-compose.yml  dump.rdb  pyproject.toml
app/: configs.py
app/api/: __init__.py  managers.py
app/api/routers/: chat.py
app/clients/: console.py
app/db/: __init__.py
tests/app/: conftest.py  test_api_chat.py  test_clients_console.py
