[tool.poetry]
name = "homework4"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
websockets = "^10.2"
aioconsole = "^0.4.1"
redis = "4.1.0"
aioredis = "^2.0.1"
aiohttp = "^3.8.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.0"
black = "^22.1"
unify = "^0.5"
flake8 = "^4.0"
pylint = "^2.12.1"
mypy = "^0.940"
pytest-deadfixtures = "^2.2.1"
asynctest = "^0.13.0"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.3"
fakeredis = "^1.7.1"
types-requests = "^2.27.20"
types-redis = "^4.2.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
